--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.6.4.slim.min.js"
         integrity="sha256-a2yjHM4jnF9f54xUQakjZGaqYs/V1CYvWpoqZzC2/Bw=" crossorigin="anonymous"></script>
     <script src="main.js" type="module"></script>
-    <title>Saját név</title>
+    <title>Tar Gergő</title>
 </head>
 
 <body>
